# workspace

./: .env  Cargo.toml  README.md
web_service/: Cargo.toml
web_service/src/: db_access.rs  handlers.rs  models.rs  routers.rs  state.rs
