[package]
name = "web_service"
version = "0.1.0"
edition = "2021" # I really expect edition 2024
resolver = "2"
default-run = "server_for_web"
authors = ["Chen Shi<chenshi@krutt.org>"]

[dependencies]
# no need to use actix-rt, it's combined into the "actix-web"
actix-web = "^4.9.0"
chrono = { version = "^0.4.38", features = ["serde"] }
dotenv = "^0.15.0"
# openssl = { version = "^0.10.68", features = ["vendored"] }
# if you want to use openssl rather than rustls, it needs perl!
serde = { version = "^1.0.213", features = ["derive"] }
sqlx = { version = "^0.8.2", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono"
] }


[[bin]]
name = "server_for_web"
